// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/DropdownMenu Default 1`] = `
<div
  className="inline-block relative"
>
  <button
    className=" cursor-pointer focus:ring-2 focus:outline-none focus:ring-green"
    onClick={[Function]}
  >
    <a
      className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
    >
      Click me
    </a>
  </button>
  <span
    aria-hidden={true}
    className="absolute top-full w-3 h-3 bg-white border border-gray-200 shadow transition transform -translate-x-1/2 rotate-45 translate-y-2 left-1/2 opacity-0"
  />
  <section
    className="absolute top-full transform transition whitespace-nowrap pt-3 w-auto max-width-md transform-y-4 transform-x-3 left-0 opacity-0 pointer-events-none"
  >
    <div
      className="bg-white border border-gray-200 shadow"
    >
      <div>
        <a
          className="group block w-full last:border-b-0 px-4 py-3 transition text-left border-b border-gray-100 hover:bg-purple hover:bg-opacity-5 text-purple cursor-pointer"
          href="/sensors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Alle Sensoren
        </a>
        <a
          className="group block w-full last:border-b-0 px-4 py-3 transition text-left border-b border-gray-100 hover:bg-purple hover:bg-opacity-5 text-purple cursor-pointer"
          href="/account"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Account
        </a>
        <button
          className="group block w-full last:border-b-0 px-4 py-3 transition text-left border-b border-gray-100 hover:bg-purple hover:bg-opacity-5 text-purple cursor-pointer"
          onClick={[Function]}
        >
          Logout
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots UI Elements/DropdownMenu With Custom Children 1`] = `
<div
  className="inline-block relative"
>
  <button
    className=" cursor-pointer focus:ring-2 focus:outline-none focus:ring-green"
    onClick={[Function]}
  >
    <a
      className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
    >
      Click me
    </a>
  </button>
  <span
    aria-hidden={true}
    className="absolute top-full w-3 h-3 bg-white border border-gray-200 shadow transition transform -translate-x-1/2 rotate-45 translate-y-2 left-1/2 opacity-0"
  />
  <section
    className="absolute top-full transform transition whitespace-nowrap pt-3 w-auto max-width-md transform-y-4 transform-x-3 left-0 opacity-0 pointer-events-none"
  >
    <div
      className="bg-white border border-gray-200 shadow"
    >
      <div>
        <a
          className="group block w-full last:border-b-0 px-4 py-3 transition text-left border-b border-gray-100 hover:bg-purple hover:bg-opacity-5 text-purple cursor-pointer"
          href="/account/sensors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root transition mr-2 text-gray-400 group-hover:text-purple"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
            />
          </svg>
           Meine Projekte
        </a>
        <a
          className="group block w-full last:border-b-0 px-4 py-3 transition text-left border-b border-gray-100 hover:bg-purple hover:bg-opacity-5 text-purple cursor-pointer"
          href="/account/profile"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root transition mr-2 text-gray-400 group-hover:text-purple"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
          </svg>
           Account
        </a>
        <button
          className="group block w-full last:border-b-0 px-4 py-3 transition text-left border-b border-gray-100 hover:bg-purple hover:bg-opacity-5 text-purple cursor-pointer"
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root transition mr-2 text-gray-400 group-hover:text-purple"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
           Abmelden
        </button>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots UI Elements/DropdownMenu With Disabled Item 1`] = `
<div
  className="inline-block relative"
>
  <button
    className=" cursor-pointer focus:ring-2 focus:outline-none focus:ring-green"
    onClick={[Function]}
  >
    <a
      className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
    >
      Click me
    </a>
  </button>
  <span
    aria-hidden={true}
    className="absolute top-full w-3 h-3 bg-white border border-gray-200 shadow transition transform -translate-x-1/2 rotate-45 translate-y-2 left-1/2 opacity-0"
  />
  <section
    className="absolute top-full transform transition whitespace-nowrap pt-3 w-auto max-width-md transform-y-4 transform-x-3 left-0 opacity-0 pointer-events-none"
  >
    <div
      className="bg-white border border-gray-200 shadow"
    >
      <div>
        <a
          className="group block w-full last:border-b-0 px-4 py-3 transition text-left border-b border-gray-100 hover:bg-purple hover:bg-opacity-5 text-purple cursor-pointer"
          href="/sensores"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Alle Sensoren
        </a>
        <span
          className="group block w-full last:border-b-0 px-4 py-3 transition text-left border-b border-gray-100 bg-gray-50 text-gray-700 cursor-not-allowed"
        >
          Account
        </span>
        <span
          className="group block w-full last:border-b-0 px-4 py-3 transition text-left border-b border-gray-100 bg-gray-50 text-gray-700 cursor-not-allowed"
        >
          Logout
        </span>
      </div>
    </div>
  </section>
</div>
`;
